WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94775
Fixed a fastMallocForbid/Allow compile error for some compilers
https://bugs.webkit.org/show_bug.cgi?id=94775
Summary
Fixed a fastMallocForbid/Allow compile error for some compilers
Geoffrey Garen
Reported
2012-08-22 21:36:35 PDT
Fixed a fastMallocForbid/Allow compile error for some compilers
Attachments
Patch
(1.18 KB, patch)
2012-08-22 21:38 PDT
,
Geoffrey Garen
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-08-22 21:38:18 PDT
Created
attachment 160083
[details]
Patch
Geoffrey Garen
Comment 2
2012-08-23 10:54:32 PDT
Committed
r126447
: <
http://trac.webkit.org/changeset/126447
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug