Fixed a fastMallocForbid/Allow compile error for some compilers https://bugs.webkit.org/show_bug.cgi?id=94775

Reviewed by Gavin Barraclough.

* wtf/FastMalloc.h:
(WTF::fastMallocForbid()):
(WTF::fastMallocAllow()): Export, since these are called by JavaScriptCore.


Canonical link: https://commits.webkit.org/112673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126447 268f45cc-cd09-0410-ab3c-d52691b4dbfc